Mon Nov 24 22:57:25 2008  Shugo Maeda  <shugo@ruby-lang.org>

	* strftime.c (rb_strftime): A width specifier for %t and %n should
	  work.  [ruby-dev:37160]

Mon Nov 24 22:07:07 2008  Shugo Maeda  <shugo@ruby-lang.org>

	* strftime.c (rb_strftime): The precision of %0N should be 9.
	  [ruby-dev:37156]

	* test/ruby/test_time.rb (test_strftime): ditto.

Mon Nov 24 21:38:23 2008  Shugo Maeda  <shugo@ruby-lang.org>

	* strftime.c (rb_strftime): The default precision should be 1, not
	  0.  [ruby-dev:37155]

	* test/ruby/test_time.rb (test_strftime): ditto.

Mon Nov 24 18:35:00 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/time.rb: r20251 reverted.  The patched behavior do not round
	  trip.  [ruby-core:19988]

Sun Nov 23 16:04:05 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* signal.c (default_handler, Init_signal): compile error if
	  USE_SIGALTSTACK is not defined.

Sun Nov 23 13:39:49 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* ext/pty/pty.c: reverts 20326. [ruby-dev:37146].

Sat Nov 22 23:59:06 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/time.rb: reverts r20305. [ruby-dev:37144].

Sat Nov 22 18:24:24 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* file.c (rb_file_world_writable_p): should return nil for non
	  world-writable files.

Sat Nov 22 10:31:25 2008  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tkextlib/blt.rb, ext/tk/lib/tkextlib/blt/vector.rb: 
	  fix NameError bug.

Sat Nov 22 03:41:22 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/pty/pty.c (get_device_once): abandon asynchronous exception
	  that might cause serious problem if a program terminated early.
	  asynchronous exception is a very bad thing anyway.  use
	  Process.waitpid(pid) or PTY.check(pid) to poll program
	  termination. if PTY.check is called with optional second
	  argument being true, it raises an exception same as one from
	  previous behavior.  [incompatible] fix: [ruby-core:19583]
